clap_derive/tests/ui/default_value_t_invalid.stderr
error[E0600]: cannot apply unary operator `-` to type `u32`
  --> $DIR/default_value_t_invalid.rs:14:30
   |
14 |     #[clap(default_value_t = -10)]
   |                              ^^^ cannot apply unary operator `-`
   |
   = note: unsigned values cannot be negated
